fix body overflow css issue

--- a/src/style/_body.scss
+++ b/src/style/_body.scss
@@ -37,7 +37,7 @@ img {
 }
 
 #___gatsby {
-    width: 100vw;
+    width: 100%;
     overflow-x: hidden;
     height: auto;
     left: 0;
