--- a/src/style/_navbar.scss
+++ b/src/style/_navbar.scss
@@ -3,6 +3,8 @@
     font-style: italic;
     float: left;
     font-size: 120%;
+    padding-left: 40px;
+    padding-right: 0 !important;
     transition: all $duration ease;
 }
 
@@ -13,13 +15,13 @@
 .nav-links {
     display: inline-block;
     float: right;
-    margin-right: 40px;
+    padding-top: 3px; // to make up for diff in font size between links and logo
 }
 
 .nav-link {
     color: $sec-type;
     text-decoration: none;
-    padding: 0 20px;
+    padding-right: 40px;
 }
 
 .nav-link:hover {
@@ -33,5 +35,5 @@
     left: 0;
     width: 100vw;
     background-color: $body;
-    padding: 40px 20px 20px 20px;
+    padding: 30px 0;
 }
