--- a/src/style/_tags.scss
+++ b/src/style/_tags.scss
@@ -2,7 +2,7 @@
     text-transform: uppercase;
     font-size: 80%;
     margin: 5px 10px;
-    padding: 6px;
+    // padding: 6px;
     color: $ter-type;
     // border: 1px solid $accent-light;
     border-radius: $radius;
@@ -30,4 +30,3 @@
 .tag-text {
     display: inline-block;
 }
-
